--- a/.gitignore
+++ b/.gitignore
@@ -148,4 +148,5 @@ modules.xml
 *.ipr
 
 
-# End of https://www.gitignore.io/api/intellij+all.flattened-pom.xml
+# End of https://www.gitignore.io/api/intellij+all
+.flattened-pom.xml
