--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,11 @@
             <artifactId>common-utils</artifactId>
             <version>1.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-tcnative-boringssl-static</artifactId>
+            <version>2.0.30.Final</version>
+        </dependency>
 
         <dependency>
             <groupId>it.tdlight</groupId>
