--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
             <version>3.4.1</version>
         </dependency>
         <dependency>
+            <groupId>com.akaita.java</groupId>
+            <artifactId>rxjava2-debug</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.30</version>
