--- a/pom.xml
+++ b/pom.xml
@@ -207,7 +207,7 @@
                 <version>3.1.2</version>
                 <executions>
                     <execution>
-                        <phase>compile</phase>
+                        <phase>package</phase>
                         <goals>
                             <goal>copy-dependencies</goal>
                         </goals>
