--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
-        <vertx.version>4.0.2</vertx.version>
-        <junit-jupiter.version>5.7.0</junit-jupiter.version>
+        <vertx.version>4.0.3</vertx.version>
     </properties>
     <repositories>
         <repository>
@@ -85,7 +84,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit-jupiter.version}</version>
+            <version>5.8.0-M1</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -97,7 +96,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit-jupiter.version}</version>
+            <version>5.8.0-M1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -128,28 +127,28 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.12.1</version>
+            <version>2.14.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.12.1</version>
+            <version>2.14.1</version>
         </dependency>
         <dependency>
             <groupId>org.warp</groupId>
             <artifactId>common-utils</artifactId>
-            <version>1.1.2</version>
+            <version>1.1.3</version>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-tcnative-boringssl-static</artifactId>
-            <version>2.0.30.Final</version>
+            <version>2.0.39.Final</version>
         </dependency>
 
         <dependency>
             <groupId>it.tdlight</groupId>
             <artifactId>tdlight-java</artifactId>
-            <version>[4.171.83,)</version>
+            <version>[4.171.112,)</version>
         </dependency>
         <dependency>
             <groupId>it.cavallium</groupId>
@@ -159,18 +158,18 @@
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
-            <version>1.2</version>
+            <version>1.3.2</version>
         </dependency>
 
         <dependency>
             <groupId>it.unimi.dsi</groupId>
             <artifactId>fastutil</artifactId>
-            <version>8.3.1</version>
+            <version>8.5.4</version>
         </dependency>
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.6</version>
+          <groupId>com.squareup.moshi</groupId>
+          <artifactId>moshi</artifactId>
+          <version>1.12.0</version>
         </dependency>
     </dependencies>
     <build>
@@ -259,12 +258,12 @@
                     <dependency>
                         <groupId>org.junit.platform</groupId>
                         <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>1.2.0</version>
+                        <version>1.3.2</version>
                     </dependency>
                     <dependency>
                         <groupId>org.junit.jupiter</groupId>
                         <artifactId>junit-jupiter-engine</artifactId>
-                        <version>5.7.0</version>
+                        <version>5.8.0-M1</version>
                     </dependency>
                 </dependencies>
             </plugin>
