--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,7 @@
 
         <dependency>
             <groupId>it.unimi.dsi</groupId>
-            <artifactId>fastutil-core</artifactId>
+            <artifactId>fastutil</artifactId>
         </dependency>
         <dependency>
           <groupId>com.squareup.moshi</groupId>
