--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@
         <dependency>
             <groupId>it.tdlight</groupId>
             <artifactId>tdlight-java</artifactId>
-            <version>[1.7.6.4,)</version>
+            <version>1.7.6.5</version>
         </dependency>
         <dependency>
             <groupId>it.cavallium</groupId>
