--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
         <artifactId>fastutil</artifactId>
         <version>8.5.6</version>
       </dependency>
+      <dependency>
+        <groupId>it.tdlight</groupId>
+        <artifactId>tdlight-java</artifactId>
+        <version>2.7.8.11</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <dependencies>
@@ -154,7 +159,6 @@
     <dependency>
       <groupId>it.tdlight</groupId>
       <artifactId>tdlight-java</artifactId>
-      <version>2.7.8.9</version>
     </dependency>
     <dependency>
       <groupId>it.cavallium</groupId>
