--- a/pom.xml
+++ b/pom.xml
@@ -3,23 +3,16 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>it.tdlight</groupId>
-  <artifactId>tdlib-session-container</artifactId>
-  <version>5.0.${revision}</version>
-  <name>TDLib Session Container</name>
+  <artifactId>tdlib-reactive-api</artifactId>
+  <version>6.0.${revision}</version>
+  <name>TDLib Reactive API</name>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <revision>0-SNAPSHOT</revision>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
 
-    <vertx.version>4.2.0</vertx.version>
+    <atomix.version>3.0.6</atomix.version>
   </properties>
   <repositories>
-    <repository>
-      <id>protoarch</id>
-      <name>protoarch</name>
-      <url>http://home.apache.org/~aajisaka/repository</url>
-    </repository>
     <repository>
       <id>mchv-release</id>
       <name>MCHV Release Apache Maven Packages</name>
@@ -52,50 +45,67 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>io.vertx</groupId>
-        <artifactId>vertx-stack-depchain</artifactId>
-        <version>${vertx.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <dependency>
         <groupId>it.unimi.dsi</groupId>
         <artifactId>fastutil</artifactId>
         <version>8.5.6</version>
       </dependency>
+			<dependency>
+				<groupId>io.atomix</groupId>
+				<artifactId>atomix</artifactId>
+				<version>${atomix.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.atomix</groupId>
+				<artifactId>atomix-raft</artifactId>
+				<version>${atomix.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.atomix</groupId>
+				<artifactId>atomix-primary-backup</artifactId>
+				<version>${atomix.version}</version>
+			</dependency>
       <dependency>
         <groupId>it.tdlight</groupId>
         <artifactId>tdlight-java</artifactId>
-        <version>2.7.9.4</version>
+        <version>2.7.9.5</version>
       </dependency>
+			<dependency>
+				<groupId>io.projectreactor</groupId>
+				<artifactId>reactor-core</artifactId>
+				<version>3.4.12</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>1.7.32</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-core</artifactId>
+				<version>2.14.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-slf4j-impl</artifactId>
+				<version>2.14.1</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.dataformat</groupId>
+				<artifactId>jackson-dataformat-yaml</artifactId>
+				<version>2.13.0</version>
+			</dependency>
+			<dependency>
+				<groupId>net.minecrell</groupId>
+				<artifactId>terminalconsoleappender</artifactId>
+				<version>1.3.0</version>
+			</dependency>
     </dependencies>
   </dependencyManagement>
   <dependencies>
-		<dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-hazelcast</artifactId>
-      <version>${vertx.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-junit5</artifactId>
-      <version>${vertx.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-reactive-streams</artifactId>
-      <version>${vertx.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-rx-java2</artifactId>
-      <version>${vertx.version}</version>
-    </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-      <version>5.8.1</version>
+      <version>5.8.2</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
@@ -107,48 +117,24 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.8.1</version>
+      <version>5.8.2</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-circuit-breaker</artifactId>
-      <version>${vertx.version}</version>
     </dependency>
     <dependency>
       <groupId>io.projectreactor</groupId>
       <artifactId>reactor-core</artifactId>
-      <version>3.4.11</version>
-    </dependency>
-    <dependency>
-      <groupId>io.projectreactor</groupId>
-      <artifactId>reactor-tools</artifactId>
-      <version>3.4.11</version>
-    </dependency>
-		<dependency>
-			<groupId>io.projectreactor.addons</groupId>
-			<artifactId>reactor-adapter</artifactId>
-			<version>3.4.5</version>
-		</dependency>
-    <dependency>
-      <groupId>com.akaita.java</groupId>
-      <artifactId>rxjava2-debug</artifactId>
-      <version>1.4.0</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>1.7.32</version>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
-      <version>2.14.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
-      <version>2.14.1</version>
     </dependency>
     <dependency>
       <groupId>org.warp</groupId>
@@ -158,38 +144,39 @@
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-tcnative-boringssl-static</artifactId>
-      <version>2.0.45.Final</version>
+      <version>2.0.46.Final</version>
     </dependency>
 
     <dependency>
       <groupId>it.tdlight</groupId>
       <artifactId>tdlight-java</artifactId>
     </dependency>
-    <dependency>
-      <groupId>it.cavallium</groupId>
-      <artifactId>concurrent-locks</artifactId>
-      <version>1.0.8</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.annotation</groupId>
-      <artifactId>javax.annotation-api</artifactId>
-      <version>1.3.2</version>
-    </dependency>
+
+		<dependency>
+			<groupId>io.atomix</groupId>
+			<artifactId>atomix</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.atomix</groupId>
+			<artifactId>atomix-raft</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.atomix</groupId>
+			<artifactId>atomix-primary-backup</artifactId>
+		</dependency>
 
     <dependency>
       <groupId>it.unimi.dsi</groupId>
       <artifactId>fastutil</artifactId>
     </dependency>
-    <dependency>
-      <groupId>com.squareup.moshi</groupId>
-      <artifactId>moshi</artifactId>
-      <version>1.12.0</version>
-    </dependency>
-    <dependency>
-      <groupId>dev.zacsweers.moshix</groupId>
-      <artifactId>moshi-records-reflect</artifactId>
-      <version>0.14.1</version>
-    </dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-yaml</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.minecrell</groupId>
+			<artifactId>terminalconsoleappender</artifactId>
+		</dependency>
   </dependencies>
   <build>
     <resources>
@@ -224,7 +211,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <release>11</release>
+          <release>17</release>
           <useIncrementalCompilation>false</useIncrementalCompilation>
         </configuration>
       </plugin>
