--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <revision>0-SNAPSHOT</revision>
 
     <atomix.version>3.0.6</atomix.version>
+		<record.builder.version>29</record.builder.version>
   </properties>
   <repositories>
     <repository>
@@ -177,6 +178,12 @@
 			<groupId>net.minecrell</groupId>
 			<artifactId>terminalconsoleappender</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.soabase.record-builder</groupId>
+			<artifactId>record-builder-processor</artifactId>
+			<version>${record.builder.version}</version>
+			<scope>provided</scope>
+		</dependency>
   </dependencies>
   <build>
     <resources>
@@ -210,10 +217,20 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
-        <configuration>
-          <release>17</release>
-          <useIncrementalCompilation>false</useIncrementalCompilation>
-        </configuration>
+				<configuration>
+					<source>17</source>
+					<target>17</target>
+					<annotationProcessorPaths>
+						<annotationProcessorPath>
+							<groupId>io.soabase.record-builder</groupId>
+							<artifactId>record-builder-processor</artifactId>
+							<version>${record.builder.version}</version>
+						</annotationProcessorPath>
+					</annotationProcessorPaths>
+					<annotationProcessors>
+						<annotationProcessor>io.soabase.recordbuilder.processor.RecordBuilderProcessor</annotationProcessor>
+					</annotationProcessors>
+				</configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
