--- a/pom.xml
+++ b/pom.xml
@@ -65,11 +65,6 @@
 				<artifactId>atomix-primary-backup</artifactId>
 				<version>${atomix.version}</version>
 			</dependency>
-      <dependency>
-        <groupId>it.tdlight</groupId>
-        <artifactId>tdlight-java</artifactId>
-        <version>2.7.9.5</version>
-      </dependency>
 			<dependency>
 				<groupId>io.projectreactor</groupId>
 				<artifactId>reactor-core</artifactId>
@@ -99,6 +94,13 @@
 				<groupId>net.minecrell</groupId>
 				<artifactId>terminalconsoleappender</artifactId>
 				<version>1.3.0</version>
+			</dependency>
+			<dependency>
+				<groupId>it.tdlight</groupId>
+				<artifactId>tdlight-java-bom</artifactId>
+				<version>2.7.10.1</version>
+				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
     </dependencies>
   </dependencyManagement>
