--- a/pom.xml
+++ b/pom.xml
@@ -9,16 +9,16 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <revision>0-SNAPSHOT</revision>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
 
-    <vertx.version>4.2.0</vertx.version>
+    <vertx.version>4.2.1</vertx.version>
   </properties>
   <repositories>
     <repository>
       <id>protoarch</id>
       <name>protoarch</name>
-      <url>http://home.apache.org/~aajisaka/repository</url>
+      <url>https://home.apache.org/~aajisaka/repository</url>
     </repository>
     <repository>
       <id>mchv-release</id>
@@ -65,8 +65,10 @@
       </dependency>
       <dependency>
         <groupId>it.tdlight</groupId>
-        <artifactId>tdlight-java</artifactId>
-        <version>2.7.9.2</version>
+        <artifactId>tdlight-java-bom</artifactId>
+        <version>1.0.0.0-SNAPSHOT</version>
+				<type>pom</type>
+				<scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -95,7 +97,7 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-      <version>5.8.1</version>
+      <version>5.8.2</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
@@ -107,7 +109,7 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.8.1</version>
+      <version>5.8.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -118,12 +120,12 @@
     <dependency>
       <groupId>io.projectreactor</groupId>
       <artifactId>reactor-core</artifactId>
-      <version>3.4.11</version>
+      <version>3.4.12</version>
     </dependency>
     <dependency>
       <groupId>io.projectreactor</groupId>
       <artifactId>reactor-tools</artifactId>
-      <version>3.4.11</version>
+      <version>3.4.12</version>
     </dependency>
 		<dependency>
 			<groupId>io.projectreactor.addons</groupId>
@@ -158,7 +160,7 @@
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-tcnative-boringssl-static</artifactId>
-      <version>2.0.45.Final</version>
+      <version>2.0.46.Final</version>
     </dependency>
 
     <dependency>
