--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
 			<dependency>
 				<groupId>it.tdlight</groupId>
 				<artifactId>tdlight-java-bom</artifactId>
-				<version>2.7.10.1</version>
+				<version>2.7.10.6</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -154,6 +154,10 @@
       <groupId>it.tdlight</groupId>
       <artifactId>tdlight-java</artifactId>
     </dependency>
+		<dependency>
+			<groupId>it.tdlight</groupId>
+			<artifactId>tdlight-natives-linux-amd64</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>io.atomix</groupId>
