--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 			<dependency>
 				<groupId>it.tdlight</groupId>
 				<artifactId>tdlight-java-bom</artifactId>
-				<version>2.8.0.1</version>
+				<version>2.8.0.2</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -109,6 +109,12 @@
 			<groupId>io.atomix</groupId>
 			<artifactId>atomix</artifactId>
 			<version>${atomix.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.ow2.asm</groupId>
+					<artifactId>asm</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>io.atomix</groupId>
@@ -119,6 +125,11 @@
 			<groupId>io.atomix</groupId>
 			<artifactId>atomix-primary-backup</artifactId>
 			<version>${atomix.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.ow2.asm</groupId>
+			<artifactId>asm</artifactId>
+			<version>9.2</version>
 		</dependency>
 		<dependency>
 			<groupId>io.projectreactor</groupId>
