--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,10 @@
 					<groupId>org.ow2.asm</groupId>
 					<artifactId>asm</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>io.netty</groupId>
+					<artifactId>netty-handler</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
