--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,10 @@
 			<artifactId>reactor-tools</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.projectreactor.kafka</groupId>
+			<artifactId>reactor-kafka</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 			<version>2.17.1</version>
