--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<revision>0-SNAPSHOT</revision>
 
-		<atomix.version>3.1.10</atomix.version>
+		<atomix.version>3.1.12</atomix.version>
 		<record.builder.version>33</record.builder.version>
 	</properties>
 	<repositories>
@@ -158,6 +158,11 @@
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-yaml</artifactId>
 			<version>2.13.2</version>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.xml.bind</groupId>
+			<artifactId>jakarta.xml.bind-api</artifactId>
+			<version>4.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>net.minecrell</groupId>
