--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>it.tdlight</groupId>
 	<artifactId>tdlib-reactive-api</artifactId>
@@ -38,7 +39,7 @@
 	<scm>
 		<connection>scm:git:https://git.ignuranza.net/tdlight-team/tdlib-session-container.git</connection>
 		<developerConnection>scm:git:https://git.ignuranza.net/tdlight-team/tdlib-session-container.git
-    </developerConnection>
+		</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 	<dependencyManagement>
