--- a/pom.xml
+++ b/pom.xml
@@ -54,13 +54,18 @@
 			<dependency>
 				<groupId>io.projectreactor</groupId>
 				<artifactId>reactor-bom</artifactId>
-				<version>2020.0.17</version>
+				<version>2020.0.18</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
+		<dependency>
+			<groupId>org.jetbrains</groupId>
+			<artifactId>annotations</artifactId>
+			<version>23.0.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
@@ -80,14 +85,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.warp</groupId>
-			<artifactId>common-utils</artifactId>
-			<version>1.1.8</version>
-		</dependency>
-		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-tcnative-boringssl-static</artifactId>
-			<version>2.0.48.Final</version>
+			<version>2.0.51.Final</version>
 		</dependency>
 
 		<dependency>
@@ -131,12 +131,12 @@
 		<dependency>
 			<groupId>org.ow2.asm</groupId>
 			<artifactId>asm</artifactId>
-			<version>9.2</version>
+			<version>9.3</version>
 		</dependency>
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-core</artifactId>
-		</dependency>
+    </dependency>
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-tools</artifactId>
@@ -176,6 +176,12 @@
 			<artifactId>record-builder-processor</artifactId>
 			<version>${record.builder.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>31.1-jre</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 	<build>
