--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
 			<dependency>
 				<groupId>it.tdlight</groupId>
 				<artifactId>tdlight-java-bom</artifactId>
-				<version>2.8.3.0</version>
+				<version>2.8.3.4</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -89,7 +89,6 @@
 			<artifactId>netty-tcnative-boringssl-static</artifactId>
 			<version>2.0.51.Final</version>
 		</dependency>
-
 		<dependency>
 			<groupId>it.tdlight</groupId>
 			<artifactId>tdlight-java</artifactId>
@@ -98,7 +97,6 @@
 			<groupId>it.tdlight</groupId>
 			<artifactId>tdlight-natives-linux-amd64</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>it.unimi.dsi</groupId>
 			<artifactId>fastutil</artifactId>
@@ -242,7 +240,7 @@
 				<version>1.1.0</version>
 				<configuration>
 					<updatePomFile>true</updatePomFile>
-					<flattenMode>resolveCiFriendliesOnly</flattenMode>
+					<flattenMode>oss</flattenMode>
 				</configuration>
 				<executions>
 					<execution>
@@ -263,13 +261,25 @@
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>templating-maven-plugin</artifactId>
-				<version>1.0.0</version>
+				<artifactId>flatten-maven-plugin</artifactId>
+				<version>1.1.0</version>
+				<configuration>
+					<updatePomFile>true</updatePomFile>
+					<flattenMode>oss</flattenMode>
+				</configuration>
 				<executions>
 					<execution>
-						<id>filtering-java-templates</id>
+						<id>flatten</id>
+						<phase>process-resources</phase>
 						<goals>
-							<goal>filter-sources</goal>
+							<goal>flatten</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>flatten.clean</id>
+						<phase>clean</phase>
+						<goals>
+							<goal>clean</goal>
 						</goals>
 					</execution>
 				</executions>
