--- a/pom.xml
+++ b/pom.xml
@@ -54,13 +54,20 @@
 			<dependency>
 				<groupId>io.projectreactor</groupId>
 				<artifactId>reactor-bom</artifactId>
-				<version>2020.0.18</version>
+				<version>2020.0.19</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-tools</artifactId>
+			<classifier>original</classifier>
+			<scope>runtime</scope>
+			<version>3.4.18</version>
+		</dependency>
 		<dependency>
 			<groupId>org.jetbrains</groupId>
 			<artifactId>annotations</artifactId>
@@ -316,6 +323,18 @@
 								</pluginExecution>
 							</pluginExecutions>
 						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>net.bytebuddy</groupId>
+					<artifactId>byte-buddy-maven-plugin</artifactId>
+					<version>1.12.10</version>
+					<configuration>
+						<transformations>
+							<transformation>
+								<plugin>reactor.tools.agent.ReactorDebugByteBuddyPlugin</plugin>
+							</transformation>
+						</transformations>
 					</configuration>
 				</plugin>
 			</plugins>
