--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,13 @@
 
 		<record.builder.version>33</record.builder.version>
 	</properties>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>mchv-release</id>
+			<name>MCHV Release Apache Maven Packages</name>
+			<url>https://mvn.mchv.eu/repository/mchv</url>
+		</pluginRepository>
+	</pluginRepositories>
 	<repositories>
 		<repository>
 			<id>mchv-release</id>
@@ -53,7 +60,7 @@
 			<dependency>
 				<groupId>io.projectreactor</groupId>
 				<artifactId>reactor-bom</artifactId>
-				<version>2020.0.19</version>
+				<version>2020.0.20</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -65,7 +72,7 @@
 			<artifactId>reactor-tools</artifactId>
 			<classifier>original</classifier>
 			<scope>runtime</scope>
-			<version>3.4.18</version>
+			<version>3.4.19</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains</groupId>
@@ -93,7 +100,7 @@
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-tcnative-boringssl-static</artifactId>
-			<version>2.0.51.Final</version>
+			<version>2.0.53.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>it.tdlight</groupId>
@@ -116,10 +123,6 @@
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-core</artifactId>
     </dependency>
-		<dependency>
-			<groupId>io.projectreactor</groupId>
-			<artifactId>reactor-tools</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>io.projectreactor.kafka</groupId>
 			<artifactId>reactor-kafka</artifactId>
@@ -265,6 +268,25 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+			<plugin>
+				<groupId>net.bytebuddy</groupId>
+				<artifactId>byte-buddy-maven-plugin</artifactId>
+				<version>1.12.13-20220629</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>transform</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<transformations>
+						<transformation>
+							<plugin>reactor.tools.agent.ReactorDebugByteBuddyPlugin</plugin>
+						</transformation>
+					</transformations>
+				</configuration>
+			</plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -297,18 +319,6 @@
 								</pluginExecution>
 							</pluginExecutions>
 						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>net.bytebuddy</groupId>
-					<artifactId>byte-buddy-maven-plugin</artifactId>
-					<version>1.12.10</version>
-					<configuration>
-						<transformations>
-							<transformation>
-								<plugin>reactor.tools.agent.ReactorDebugByteBuddyPlugin</plugin>
-							</transformation>
-						</transformations>
 					</configuration>
 				</plugin>
 			</plugins>
