--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,14 @@
 			<dependency>
 				<groupId>io.projectreactor</groupId>
 				<artifactId>reactor-bom</artifactId>
-				<version>2020.0.22</version>
+				<version>2020.0.23</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>io.rsocket</groupId>
+				<artifactId>rsocket-bom</artifactId>
+				<version>1.1.3</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -72,7 +79,7 @@
 			<artifactId>reactor-tools</artifactId>
 			<classifier>original</classifier>
 			<scope>runtime</scope>
-			<version>3.4.22</version>
+			<version>3.4.23</version>
     </dependency>
 		<dependency>
 			<groupId>org.jetbrains</groupId>
@@ -128,6 +135,22 @@
 			<artifactId>reactor-kafka</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.rsocket</groupId>
+			<artifactId>rsocket-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.rsocket</groupId>
+			<artifactId>rsocket-load-balancer</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.rsocket</groupId>
+			<artifactId>rsocket-transport-local</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.rsocket</groupId>
+			<artifactId>rsocket-transport-netty</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
 			<version>2.19.0</version>
@@ -151,6 +174,12 @@
 			<groupId>net.minecrell</groupId>
 			<artifactId>terminalconsoleappender</artifactId>
 			<version>1.3.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.logging.log4j</groupId>
+					<artifactId>log4j-core</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
