--- a/pom.xml
+++ b/pom.xml
@@ -180,7 +180,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-yaml</artifactId>
-			<version>2.13.4</version>
+			<version>2.14.0-rc1</version>
 		</dependency>
 		<dependency>
 			<groupId>jakarta.xml.bind</groupId>
