--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 			<dependency>
 				<groupId>it.tdlight</groupId>
 				<artifactId>tdlight-java-bom</artifactId>
-				<version>2.8.9.0</version>
+				<version>2.8.9.2</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -127,7 +127,7 @@
 		</dependency>
 		<dependency>
 			<groupId>it.tdlight</groupId>
-			<artifactId>tdlight-java</artifactId>
+			<artifactId>tdlight-java-8</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>it.tdlight</groupId>
@@ -135,7 +135,7 @@
 		</dependency>
 		<dependency>
 			<groupId>it.unimi.dsi</groupId>
-			<artifactId>fastutil</artifactId>
+			<artifactId>fastutil-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.ow2.asm</groupId>
