--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 			<dependency>
 				<groupId>it.tdlight</groupId>
 				<artifactId>tdlight-java-bom</artifactId>
-				<version>2.8.9.2</version>
+				<version>2.8.9.3</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -134,10 +134,6 @@
 			<artifactId>tdlight-natives-linux-amd64</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>it.unimi.dsi</groupId>
-			<artifactId>fastutil-core</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.ow2.asm</groupId>
 			<artifactId>asm</artifactId>
 			<version>9.4</version>
@@ -146,6 +142,11 @@
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-core</artifactId>
     </dependency>
+		<dependency>
+			<groupId>it.unimi.dsi</groupId>
+			<artifactId>fastutil</artifactId>
+			<version>8.5.11</version>
+		</dependency>
 		<dependency>
 			<groupId>io.projectreactor.kafka</groupId>
 			<artifactId>reactor-kafka</artifactId>
