--- a/pom.xml
+++ b/pom.xml
@@ -408,7 +408,7 @@
 					<plugin>
 						<groupId>net.bytebuddy</groupId>
 						<artifactId>byte-buddy-maven-plugin</artifactId>
-						<version>1.12.13-20220629</version>
+						<version>1.12.21</version>
 						<executions>
 							<execution>
 								<goals>
